# clusternet

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
clusternet/: __init__.py
clusternet/apis/cluster/: services.py
clusternet/apis/cluster/controllers/: __init__.py  create_container.py  create_tunnel.py  create_worker.py  get_container.py  get_worker.py  list_containers.py  list_workers.py  remove_container.py  remove_worker.py  run_command.py  start_worker.py  stop_worker.py
clusternet/apis/cluster/infra/: __init__.py  inmemory.py
clusternet/apis/models/: __init__.py  container.py  worker.py
clusternet/apis/presentation/: exceptions.py  helpers.py  protocols.py
clusternet/apis/worker/: data.py  helpers.py  services.py
clusternet/apis/worker/controllers/: __init__.py  add_container.py  add_controller.py  add_docker.py  add_link.py  add_switch.py  clean_containers.py  config_default.py  get_docker_ip.py  (+12 more)
clusternet/client/: __init__.py  cluster.py  container.py  worker.py
clusternet/grafana/dashboards/: dashboard.yml  docker.json
clusternet/grafana/datasources/: datasource.yml
clusternet/monitoring/: cluster.py  helpers.py  services.py
clusternet/server/: cluster_app.py  worker_app.py
remotenet/apis/cluster/: services.py
remotenet/apis/models/: __init__.py  container.py  helpers.py  tunnel.py  worker.py
remotenet/apis/presentation/: exceptions.py  helpers.py
remotenet/client/: cluster.py  container.py  worker.py
remotenet/server/: cluster_app.py  worker_app.py
(+21 files in other folders)
